add Version.Net integration
add license, icon, configs...

--- a/StirlingLabs.Tests/StirlingLabs.Tests.csproj
+++ b/StirlingLabs.Tests/StirlingLabs.Tests.csproj
@@ -17,4 +17,8 @@
         <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="17.4.1" />
     </ItemGroup>
 
+    <ImportGroup>
+        <Import Project="../Version.proj" />
+    </ImportGroup>
+
 </Project>
