add simple tests as examples
add note about unique method names and update example

fix typo

add automatic nupkg generation

--- a/StirlingLabs.Tests/StirlingLabs.Tests.csproj
+++ b/StirlingLabs.Tests/StirlingLabs.Tests.csproj
@@ -8,6 +8,8 @@
         <OutputType>Library</OutputType>
         <AssemblyName>StirlingLabs.TestAdapter</AssemblyName>
         <Configuration>Release</Configuration>
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageOutputPath>../artifacts</PackageOutputPath>
     </PropertyGroup>
 
     <ItemGroup>
