add IsTestProject false to StirlingLabs.Tests.csproj

--- a/StirlingLabs.Tests/StirlingLabs.Tests.csproj
+++ b/StirlingLabs.Tests/StirlingLabs.Tests.csproj
@@ -10,6 +10,7 @@
         <Configuration>Release</Configuration>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageOutputPath>../artifacts</PackageOutputPath>
+        <IsTestProject>false</IsTestProject>
     </PropertyGroup>
 
     <ItemGroup>
