drop props because it was a dumb ideas
update readme to reflect reality of static/instance class constructor usage

add error in targets file if Microsoft.NET.Test.Sdk is missing from project

--- a/StirlingLabs.Tests/StirlingLabs.Tests.targets
+++ b/StirlingLabs.Tests/StirlingLabs.Tests.targets
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
     <Target Name="_CopyStirlingLabsTestAdapter" BeforeTargets="_CopyFilesMarkedCopyLocal">
+        <Error Text="You must add a package reference to Microsoft.NET.Test.Sdk in your project to use the StirlingLabs.Tests package."
+               Condition="'@(PackageReference->WithMetadataValue('Identity','Microsoft.NET.Test.Sdk'))'==''"/>
         <ItemGroup>
             <ReferenceCopyLocalPaths Include="@(Reference->WithMetadataValue('Filename', 'StirlingLabs.TestAdapter'))"/>
         </ItemGroup>
