--- a/StirlingLabs.Tests.Tests/StirlingLabs.Tests.Tests.csproj
+++ b/StirlingLabs.Tests.Tests/StirlingLabs.Tests.Tests.csproj
@@ -12,16 +12,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="3.2.0">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
+        <PackageReference Include="coverlet.collector" Version="3.2.0" PrivateAssets="All" />
         <PackageReference Include="FluentAssertions" Version="6.10.0" />
-        <PackageReference Include="Fody" Version="6.6.4">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="InlineIL.Fody" Version="1.7.4" />
+        <PackageReference Include="Fody" Version="6.6.4" PrivateAssets="All" />
+        <PackageReference Include="InlineIL.Fody" Version="1.7.4" PrivateAssets="All" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
         <PackageReference Include="GitHubActionsTestLogger" Version="2.0.1" PrivateAssets="All" />
         <PackageReference Include="Moq" Version="4.18.4" />
